<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/search_container">
    </ListView>

    <RelativeLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/owner"
            android:layout_toRightOf="@+id/owner_fixed"
            android:text="@string/der_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/button_obs"
            android:layout_toStartOf="@+id/button_obs" />

        <EditText
            android:id="@+id/repo"
            android:layout_below="@+id/owner"
            android:layout_toRightOf="@+id/repo_fixed"
            android:text="@string/def_repo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/button_obs"
            android:layout_toStartOf="@+id/button_obs" />

        <TextView
            android:id="@+id/owner_fixed"
            android:text="@string/owner"
            android:layout_marginLeft="5dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/owner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/repo_fixed"
            android:text="@string/repo"
            android:layout_marginLeft="5dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button_obs"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/button_obs"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />

    </RelativeLayout>

</RelativeLayout>